workspaces/DC Dev/DC Dev/src/objects/C__c.object
<CustomObject>
    <fields>
        <fullName>A__c</fullName>
        <label>A</label>
        <referenceTo>A__c</referenceTo>
        <relationshipLabel>Cs</relationshipLabel>
        <relationshipName>Cs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <label>B</label>
        <referenceTo>B__c</referenceTo>
        <relationshipLabel>Cs</relationshipLabel>
        <relationshipName>CsB</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of C</description>
        <inlineHelpText>Name of C</inlineHelpText>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>C</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>A__c</columns>
        <columns>B__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>C Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>